# split-brain

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
samples/example-plugin/: README.md  hello.py  pyproject.toml
src/splitbrain/: bootstrap.py
